# TCC

./: README.md
docs/: modelo_ia.md
medico_digital/backend/: README.md  package.json
medico_digital/backend/src/: server.js
medico_digital/frontend/: index.html  package.json
medico_digital/frontend/src/: App.tsx  index.css
medico_digital/frontend/src/service/: llmService.ts
tests/chat-example/: .env.example  package-lock.json  package.json
tests/chat-example-front/: index.html  package-lock.json  package.json
tests/chat-example-front/src/: App.tsx
tests/chat-example-front/src/service/: llmService.ts
tests/chat-example-python/chatbot_medico_academico/: README.md  chatbot_v1.py  requirements.txt  teste_chatbot.py  teste_ner.py
tests/chat-example/src/: server.js
tests/chatbot-python/: .gitignore  README.md  app.py  pyproject.toml
tests/chatbot-python/utils/: chatbot.py  files.py
